Remove Guava from gwt-jackson module